--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://EmersonMdn:Loque.321@cluster0.0llifr1.mongodb.net/pinterest?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://EmersonMdn:<PASSWORD>@cluster0.0llifr1.mongodb.net/pinterest?retryWrites=true&w=majority
